--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^2.4.0",
-    "graphql": "^14.1.1"
+    "graphql": "^14.1.1",
+    "prisma": "1.26.4",
+    "prisma-client-lib": "^1.26.4"
   }
 }
