--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "apollo-server": "^2.4.0",
     "graphql": "^14.1.1",
+    "p-iteration": "^1.1.7",
     "prisma": "1.26.4",
     "prisma-client-lib": "^1.26.4"
   }
